--- a/index.html
+++ b/index.html
@@ -3,10 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Sabrina</h1>
+  <div id="page" style="width: 600px">
+    <h1>How cute are cats?</h1>
+  </div>
+    <h3>♥They're pretty cute♥</h3>
+    <img src="./images/cat2.png" alt="cute cat image" height="200px" width="200px">
+    <br>
+    <br> 
+    <br 
+    <div>
+        <h1>Why are cats cute?</h1>
+        <h3>Don't worry, I'll tell you.</h3>
+            <ol>
+                <li>Boopable snoot.</li>
+                <li>Toe beans.</li>
+                <li>Purrs.</li>
+                <li>Snuggly.</li>
+            </ol>
+        <h3>That's why.</h3>
+      </div>
+    <br>
+      <div>
+        <label for="cuteness" style="font-size: 18px;"><b>~How cute do you think cats are?~</b></label>
+        <br>
+        <br>
+        <select name="rate" id="rate">
+            <option value="eh">eh</option>
+            <option value="okish">okish</option>
+            <option value="nuetral">nuetral</option>
+            <option value="i like them">i like them</option>
+            <option value="i love them">i LOVE them♥♥</option>
+            <option value="cuteness overload">♥CUTENESS OVERLOAD♥</option>
+        </select>
+      </div>
 </body>
+    
 </html>
