--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>How cute are cats?</title>
 </head>
-<body>
-  <div id="page" style="width: 600px">
-    <h1>How cute are cats?</h1>
-  </div>
-    <h3>♥They're pretty cute♥</h3>
-    <img src="./images/cat2.png" alt="cute cat image" height="200px" width="200px">
+<body class="cats">
     <br>
-    <br> 
-    <br 
+    <br>
+      <h1>How cute are cats?</h1>
+      <h3>♥They're pretty cute♥</h3>
+      <img src="./images/cat2.png" alt="cute cat image" height="200px" width="200px">
+    <br>
     <div>
         <h1>Why are cats cute?</h1>
         <h3>Don't worry, I'll tell you.</h3>
-            <ol>
+            <ol class="list">
                 <li>Boopable snoot.</li>
                 <li>Toe beans.</li>
                 <li>Purrs.</li>
@@ -32,11 +30,11 @@
         <br>
         <br>
         <select name="rate" id="rate">
-            <option value="eh">eh</option>
-            <option value="okish">okish</option>
-            <option value="nuetral">nuetral</option>
-            <option value="i like them">i like them</option>
-            <option value="i love them">i LOVE them♥♥</option>
+            <option value="eh">Eh</option>
+            <option value="okish">Okish</option>
+            <option value="nuetral">Nuetral</option>
+            <option value="i like them">I like them</option>
+            <option value="i love them">I LOVE them♥♥</option>
             <option value="cuteness overload">♥CUTENESS OVERLOAD♥</option>
         </select>
       </div>
